# MarkUI

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  docker.env.example  marker-docomentation.md  marker_single-help.txt
.github/workflows/: docker.yml
backend/: .gitignore  README.md  env.example  pyproject.toml  run.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: conversion.py  health.py  pdf.py  settings.py
backend/app/core/: __init__.py  config.py  database.py  redis_client.py
backend/app/models/: __init__.py  conversion_job.py  pdf_document.py  user_settings.py
backend/app/schemas/: __init__.py  conversion.py  models.py  pdf.py  settings.py
backend/app/services/: __init__.py  background_tasks.py  file_manager.py  marker_service.py  storage_manager.py
backend/scripts/: README.md  cleanup_redis.py  reset_redis.sh
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  stores.ts  types.ts
frontend/src/lib/components/: GPUStatus.svelte  JsonViewer.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/convert/: +page.svelte
frontend/src/routes/settings/: +page.svelte
