[project]
name = "markui"
version = "0.1.0"
description = "The backend marker library wrapper in FastAPI for the MarkUI project."
authors = [
    {name = "Rahat Zaman",email = "rahatzamancse@gmail.com"}
]
license = {text = "MIT"}
readme = "../README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "marker-pdf[full] (>=1.7.3,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "aiohttp (>=3.12.2,<4.0.0)"
]

[project.urls]
Repository = "https://github.com/rahatzamancse/marker-ui"
Documentation = "https://github.com/rahatzamancse/marker-ui#readme"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
